--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AMCO Tax Advisor | مستشار الضرائب AMCO</title>
+  <title>Tax Advisor | مستشار الضرائب</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -230,7 +230,7 @@
   <div class="max-w-7xl mx-auto">
     <!-- Header -->
     <header class="text-center mb-10 fade-in">
-      <h1 id="header-title" class="text-4xl md:text-5xl font-bold text-gray-800 mb-3">AMCO Tax Advisor</h1>
+      <h1 id="header-title" class="text-4xl md:text-5xl font-bold text-gray-800 mb-3">Tax Advisor</h1>
       <p id="header-subtitle" class="text-xl text-indigo-700 max-w-3xl mx-auto">
         Jordan Income Tax Calculator - Individual & Combined Filing Comparison
       </p>
@@ -512,8 +512,8 @@
           </div>
           <div class="ml-3" id="disclaimer-text">
             <p class="text-sm text-yellow-700">
-              <strong>Disclaimer:</strong> This calculator is provided for informational purposes only by AMCO to help employees decide whether to file individually or combined. 
-              Attract Company (شركة العطارات) and AMCO assume no responsibility for the accuracy of the calculations or tax decisions made based on this tool. 
+              <strong>Disclaimer:</strong> This calculator is provided for informational purposes only to help employees decide whether to file individually or combined. 
+              Developer assume no responsibility for the accuracy of the calculations or tax decisions made based on this tool. 
               For official tax assessment, please consult the Jordanian Income and Sales Tax Department (ISTD) or a qualified tax professional.
             </p>
           </div>
@@ -523,8 +523,8 @@
     
     <!-- Footer -->
     <footer class="text-center py-8 text-gray-600 border-t border-gray-200 fade-in">
-      <p class="font-medium">AMCO Tax Advisor - Jordan Income Tax Calculator</p>
-      <p class="mt-1 text-sm">developed by AMCO IT Department</p>
+      <p class="font-medium">Tax Advisor - Jordan Income Tax Calculator</p>
+      <p class="mt-1 text-sm">Developed by IT Department</p>
       <p class="mt-1 text-xs">© <span id="currentYear"></span> | For informational purposes only</p>
       <p class="mt-1 text-xs">Compliant with Jordanian Income Tax Law No. 34 of 2014 and its amendments</p>
     </footer>
@@ -537,7 +537,7 @@
     // Translations
     const translations = {
       en: {
-        "header-title": "AMCO Tax Advisor",
+        "header-title": "Tax Advisor",
         "header-subtitle": "Jordan Income Tax Calculator - Individual & Combined Filing Comparison",
         "header-law": "Compliant with Jordanian Income Tax Law No. 34 of 2014",
         "input-section-title": "Income & Deductions",
@@ -566,7 +566,7 @@
         "individual-results-title": "Individual Filing Results",
         "combined-results-title": "Combined Filing Results",
         "comparison-title": "Filing Option Comparison",
-        "disclaimer-text": "<strong>Disclaimer:</strong> This calculator is provided for informational purposes only by AMCO to help employees decide whether to file individually or combined. Attract Company (شركة العطارات) and AMCO assume no responsibility for the accuracy of the calculations or tax decisions made based on this tool. For official tax assessment, please consult the Jordanian Income and Sales Tax Department (ISTD) or a qualified tax professional.",
+        "disclaimer-text": "<strong>Disclaimer:</strong> This calculator is provided for informational purposes only to help employees decide whether to file individually or combined. Developer assume no responsibility for the accuracy of the calculations or tax decisions made based on this tool. For official tax assessment, please consult the Jordanian Income and Sales Tax Department (ISTD) or a qualified tax professional.",
         "personal-exemption": "Personal Exemption",
         "children-deduction": "Children Tuition",
         "health-expenses": "Health Expenses",
@@ -607,7 +607,7 @@
         "error-total-children": "Total children tuition cannot exceed 3,000 JOD"
       },
       ar: {
-        "header-title": "AMCO مستشار الضرائب",
+        "header-title": "مستشار الضرائب",
         "header-subtitle": "حاسبة ضريبة الدخل الأردنية - مقارنة بين التصريح الفردي والمشترك",
         "header-law": "متوافق مع قانون ضريبة الدخل الأردني رقم 34 لسنة 2014",
         "input-section-title": "الدخل والاستقطاعات",
@@ -636,7 +636,7 @@
         "individual-results-title": "نتائج التصريح الفردي",
         "combined-results-title": "نتائج التصريح المشترك",
         "comparison-title": "مقارنة خيارات التصريح",
-        "disclaimer-text": "<strong>تنويه:</strong> هذه الحاسبة مقدمة لأغراض إعلامية فقط من قبل شركة AMCO لمساعدة الموظفين في تحديد ما إذا كانوا سيصرحون بشكل فردي أو مشترك. شركة العطارات وشركة AMCO لا تتحملان المسؤولية عن دقة الحسابات أو القرارات الضريبية المتخذة بناءً على هذه الأداة. للتقييم الضريبي الرسمي، يرجى استشارة دائرة ضريبة الدخل والمبيعات الأردنية (ISTD) أو أخصائي ضرائب مؤهل.",
+        "disclaimer-text": "<strong>تنويه:</strong> هذه الحاسبة مقدمة لأغراض إعلامية فقط لمساعدة الموظفين في تحديد ما إذا كانوا سيصرحون بشكل فردي أو مشترك. المبرمج لا يتحمل المسؤولية عن دقة الحسابات أو القرارات الضريبية المتخذة بناءً على هذه الأداة. للتقييم الضريبي الرسمي، يرجى استشارة دائرة ضريبة الدخل والمبيعات الأردنية (ISTD) أو أخصائي ضرائب مؤهل.",
         "personal-exemption": "إعفاء شخصي",
         "children-deduction": "رسوم دراسية للأطفال",
         "health-expenses": "المصروفات الصحية",
